tests/substructural/composition/marker_composition_invalid.err.expected
error: at 32:27: [COMP-CopyMarkerNotSatisfied] In struct 'CopyOutRef' (marked Copy), field 'r' has type &out i64 which is not Copy
    |
 31 | # Copy constraint on that field.
 32 | struct CopyOutRef: Copy { r: &out i64 }
    |                           ^^^^^^^^^^^
 33 | 
    |
error: at 37:27: [COMP-CopyMarkerNotSatisfied] In struct 'CopyMutRef' (marked Copy), field 'r' has type &mut i64 which is not Copy
    |
 36 | # &mut T is exclusive and may not be duplicated; it is not Copy.
 37 | struct CopyMutRef: Copy { r: &mut i64 }
    |                           ^^^^^^^^^^^
 38 | 
    |
error: at 42:27: [COMP-DropMarkerNotSatisfied] In struct 'DropOutRef' (marked Drop), field 'r' has type &out i64 which is not Drop
    |
 41 | # &out T is linear (non-Drop). A Drop struct may not contain it.
 42 | struct DropOutRef: Drop { r: &out i64 }
    |                           ^^^^^^^^^^^
 43 | 
    |
error: at 48:32: [COMP-DropMarkerNotSatisfied] In struct 'DropLinearField' (marked Drop), field 'inner' has type Linear which is not Drop
    |
 47 | # that contains it violates the constraint on that field.
 48 | struct DropLinearField: Drop { inner: Linear }
    |                                ^^^^^^^^^^^^^
 49 | 
    |
error: at 53:32: [COMP-MoveMarkerNotSatisfied] In struct 'MoveLinearField' (marked Move), field 'i' has type Linear which is not Move
    |
 52 | # `Linear` is not Move. A Move outer struct may not contain it.
 53 | struct MoveLinearField: Move { i: Linear }
    |                                ^^^^^^^^^
 54 | 
    |
error: at 59:33: [COMP-CopyMarkerNotSatisfied] In struct 'CopyNestedLinear' (marked Copy), field 'inner' has type Linear which is not Copy
    |
 58 | # the marker constraint on the outer struct reaches the field's type.
 59 | struct CopyNestedLinear: Copy { inner: Linear }
    |                                 ^^^^^^^^^^^^^
 60 | 
    |
error: at 65:38: [COMP-CopyMarkerNotSatisfied] In struct 'CopyDropOutRef' (marked Copy), field 'r' has type &out i64 which is not Copy
    |
 64 | # a field violates each marker independently, producing two diagnostics.
 65 | struct CopyDropOutRef: Copy + Drop { r: &out i64 }
    |                                      ^^^^^^^^^^^
 66 | 
    |
error: at 65:38: [COMP-DropMarkerNotSatisfied] In struct 'CopyDropOutRef' (marked Drop), field 'r' has type &out i64 which is not Drop
    |
 64 | # a field violates each marker independently, producing two diagnostics.
 65 | struct CopyDropOutRef: Copy + Drop { r: &out i64 }
    |                                      ^^^^^^^^^^^
 66 | 
    |
error: at 70:32: [COMP-CopyMarkerNotSatisfied] In enum 'CopyMutRefVariant' (marked Copy), variant 'A' payload type &mut i64 is not Copy
    |
 69 | # A variant whose payload is &mut i64 prevents the enum from being Copy.
 70 | enum CopyMutRefVariant: Copy { A: &mut i64 }
    |                                ^^^^^^^^^^^
 71 | 
    |
error: at 75:32: [COMP-DropMarkerNotSatisfied] In enum 'DropOutRefVariant' (marked Drop), variant 'A' payload type &out i64 is not Drop
    |
 74 | # A variant whose payload is &out i64 prevents the enum from being Drop.
 75 | enum DropOutRefVariant: Drop { A: &out i64 }
    |                                ^^^^^^^^^^^
 76 | 
    |
error: at 81:32: [COMP-MoveMarkerNotSatisfied] In enum 'MoveLinearVariant' (marked Move), variant 'W' payload type Linear is not Move
    |
 80 | # it from the Move constraint declared on the enum.
 81 | enum MoveLinearVariant: Move { W: Linear }
    |                                ^^^^^^^^^
    |
